fixed: pill text not vertically aligned to center

--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  div > * {
+    @apply p-0
+  }
+}
+
 @layer utilities {
   .background-black {
     @apply bg-gradient-to-b from-theme-25 to-theme-5 to-[68%]
